0.9.0:
  - Switched to Signet OAuth implementation.
  - Removed deprecated OAuth1.0a scheme, please use OAuth2.0 instead.

0.8.2:
  - Fixed issue #89.

0.8.1:
  - Updated dependencies for Savon, OAuth2, HTTPI.

0.8.0:
  - Fixed issues #20, #78.

0.7.3:
  - Compatibility with Savon -> 1.0.0 (not backward-compatible).
  - Now require HTTPI ~> 1.0.0.
  - HttpClient is no longer explicitely required.
  - Support for OAuth2.0 authorization method.

0.7.2:
  - Compatibility with savon-0.9.10 (not backward-compatible).

0.7.1:
  - Fixed issues #63, #73, #74.

0.7.0:
  - Cleaned up unused features.
  - Now require HTTPI 0.9.7 (fixes issue #61).

0.6.4:
  - Fixed issue #66 (extra fields in OAuth header).
  - Fixed issue #69 (string names converted to Date).
  - Now require Savon 0.9.9.

0.6.3:
  - Support for CAPTCHA challenge handling.
  - Added .gemspec and updated packaging process.
  - Removed explicit require for RubyGems.
  - Added configuration directive to choose HTTPI adapter (connection.adapter)
    and read / open timeouts (connection.read_timeout, connection.open_timeout).

0.6.2:
  - Requiring Savon as "~>" now.
  - Updates to file headers.
  - Marked all sources as utf-8.

0.6.1:
  - Support for GZip compression.
  - Added logging of the response HTTP headers.
  - Updated minimal requirement for httpclient (~>2.2.3) and httpi (~>0.9.3).

0.6.0:
  - Better namespace handling in complex cases.
  - Large refactoring on parameter processing code.
  - Support for SimpleTypes in wsdl.

0.5.5:
  - Now support Savon 0.9.7.

0.5.4:
  - Improved support for OAuth.
  - Cleanups and better wsdl compatibility.

0.5.3:
  - Ruby 1.9 compatibility hotfix.

0.5.2:
  - Additional information such as headers are now available via user-specified
    block. See API-specific README for more details.
  - Fixed xsi:types were not returned in responses (issue #10).

0.5.1:
  - Now passing response header information as :header field in response.
  - Major performance improvements.