@@ -26,6 +26,7 @@ require 'ads_common/errors'
 require 'ads_common/utils'
 require 'ads_common/auth/client_login_handler'
 require 'ads_common/auth/oauth2_handler'
+require 'ads_common/auth/oauth2_jwt_handler'
 
 module AdsCommon
   class Api
@@ -197,6 +198,13 @@ module AdsCommon
           environment = @config.read('service.environment',
               api_config.default_environment())
           AdsCommon::Auth::OAuth2Handler.new(
+              @config,
+              api_config.environment_config(environment, :oauth_scope)
+          )
+        when :OAUTH2_JWT
+          environment = @config.read('service.environment',
+              api_config.default_environment())
+          AdsCommon::Auth::OAuth2JwtHandler.new(
               @config,
               api_config.environment_config(environment, :oauth_scope)
           )
